# Smart-Saudi-Stock-Advisor

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: pipeline.yml
backend/: pom.xml
backend/Smart-Saudi-Stock-Advisor/: pom.xml
backend/SmartSaudiStockAdvisor/SmartSaudiStockAdvisor/: Dockerfile  pom.xml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: Money Investment.lottie
frontend/src/: App.tsx  LandingPage.tsx  index.css  main.tsx
frontend/src/Interfaces/: AdminInterfaces.ts  AuthInterfaces.ts  CompanyResponseInterface.ts  ErrorInterface.ts  HistoricalDataInterface.ts  PredictionInterface.ts  SearchInterface.ts  SectorInterface.ts  SelectedValueInterface.ts  UpdateInfoInterface.ts  UserResponseInterface.ts  WatchListResponseInterface.ts
frontend/src/animations/: LandingPageAnimation.tsx  LoadingAnimiation.tsx  LogInAnimation.tsx  SignUpAnimation.tsx
frontend/src/components/: AppRoutes.tsx  Badge.tsx  BookMark.tsx  Button.tsx  Card.tsx  CompanyCard.tsx  DropDownMenu.tsx  ErrorBoundary.tsx  (+16 more)
python/: Dockerfile  df.xlsx  pyproject.toml
python/StockPredictionPy/: pyproject.toml
python/StockPredictionPy/src/config/: databaseConnInfo.py
python/StockPredictionPy/src/stockpredictionpy/: SavingDataFromYf.py  main.py  model.py  read_data_from_db.py  save_predictions.py  saving_data_from_yf.py  stock_indicators.py
python/StockPredictionPy/src/stockpredictionpy/config/: companies_list.py  connect_to_database.py  databaseConnInfo.py
python/StockPredictionPy/src/stockpredictionpy/utills/: get_date.py
(+145 files in other folders)
